--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <hr>
     <p>Meu nome é Maysa Jussara, sou estudante do Instituto Federal de Alagoas e estou no primeiro ano do curso medio/integrado de Desenvolvimento de Sistemas</p>
     <hr>
-    <a href= mailto:maysajussra24@gmail.com>email</a><hr>
+    <a href= mailto:maysajussra24@gmail.com>email</a><hr
+       <h2> <a href="</a>                                             
     <p>Educação: Fundamental II completo </p>
     <hr>
     <p>Experiência Profissional: criação de documentos e perfis. </p>
