--- a/formularios-html/formularios.html
+++ b/formularios-html/formularios.html
@@ -11,7 +11,7 @@
     <form action="">
       Nome:
       <input type = "text">
-    
-    </form method="">
+    Senha <input type = "password">
+    E-mail <input type = "email">
 </body>
 </html>
