--- a/formularios-html/formularios.html
+++ b/formularios-html/formularios.html
@@ -13,5 +13,10 @@
       <input type = "text">
     Senha <input type = "password">
     E-mail <input type = "email">
+   
+    <br>
+    <input type = "checkbox" name = "linguagem" > javascript
+    <input type = "checkbox" name = "linguagem" >CSS
+    <input type = "checkbox" name = "linguagem" >HTML
 </body>
 </html>
