--- a/formularios-html/formularios.html
+++ b/formularios-html/formularios.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <form>
     <h1>Formulario de cadastro</h1>
     <form action="">
       Nome:
@@ -15,8 +16,18 @@
     E-mail <input type = "email">
    
     <br>
+    Tecnologias:
     <input type = "checkbox" name = "linguagem" > javascript
     <input type = "checkbox" name = "linguagem" >CSS
     <input type = "checkbox" name = "linguagem" >HTML
+    <br>
+    Turno do curso:
+    <input type ="radio" name = "Turma"> Matutino
+    <input type ="radio" name = "Turma"> Vespertino
+    <input type ="radio" name = "Turma" > Noturno
+    <br><br>
+    <button> Enviar</button>
+    <input type = "reset" value = "Limpar">
+    </form>
 </body>
 </html>
