--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head></head>
   <body>
-    <img src=""width"400" height="200"
+  <img src=""width""
     <h1>Maysa Jussara Ribeiro</h1>
     <hr>
     <p>Meu nome é Maysa Jussara, sou estudante do Instituto Federal de Alagoas e estou no primeiro ano do curso medio/integrado de Desenvolvimento de Sistemas</p>
